--- a/FL12_HW3/homework/scss/_variables2.scss
+++ b/FL12_HW3/homework/scss/_variables2.scss
@@ -1,42 +1,31 @@
 $mFont: Source Sans Pro, sans-serif;
 $secFont: Fresca, sans-serif;
-
 $bg: url(../img/m-h-night.jpg);
-
-
-$baseFColor: #fff; //baseFontColor
-$fontColor: #bac3ce;//fontColor
-$buttonColor: #e3ac00;//buttonColor
-$buttonHColor: #f5bf1c;//buttonHoverColor
-$underlineColor: #ff4e33;//underlineColor
-$backgroundColor: #21232e;//bgColor
-$blockbgColor: #3b3f50;//blockBgColor
-$gradientColor: linear-gradient(90deg, #dda306 0%, #942f50 100%);//gradientColor
-
-$headerHeight: 580px;//headerHeight
-$headerWrWidth: 460px;//headerWrapWidth
-
-$boxWidth: 860px;//sectionCardWidth
-$boxHeight: 260px;//sectionCardHeight
-$imgWidth: 350px;//sectioncCardImgWidth
-
-$sectionBannerWidth: 900px;//sectionBannerWidth
-$footerHeight: 150px;//footerHeight
-
-//font sizes
-$logoSize: 23px;//logoNameFZ
-$logoSpan: 10px;//logoSpanFZ
-$headerHeading: 55px;//headerHeadingFZ
-$headerText: 13px;//headerTextFZ
-$headerLink: 16px;//headerLinkFZ
-
-$sectionText: 35px;//sectionTextFZ
-$boxHeading: 20px;//sectionCardHeadingFZ
-$boxText: 12px;//sectionCardTextFZ
-$boxBanner: 25px;//sectionBannerHeadFZ
-
-$sectionBannerTextFZ: 14px;//sectionBannerTextFZ
-$footerText: 11px;//footerTextFZ
-$footerCr: 13px;//footerCrFZ
-
-$lineHeight: 1.2rem;//lineHeight
+$baseFColor: #fff;
+$fontColor: #bac3ce;
+$buttonColor: #e3ac00;
+$buttonHColor: #f5bf1c;
+$underlineColor: #ff4e33;
+$backgroundColor: #21232e;
+$blockbgColor: #3b3f50;
+$gradientColor: linear-gradient(90deg, #dda306 0%, #942f50 100%);
+$headerHeight: 580px;
+$headerWrWidth: 460px;
+$boxWidth: 860px;
+$boxHeight: 260px;
+$imgWidth: 350px;
+$sectionBannerWidth: 900px;
+$footerHeight: 150px;
+$logoSize: 23px;
+$logoSpan: 10px;
+$headerHeading: 55px;
+$headerText: 13px;
+$headerLink: 16px;
+$sectionText: 35px;
+$boxHeading: 20px;
+$boxText: 12px;
+$boxBanner: 25px;
+$sectionBannerTextFZ: 14px;
+$footerText: 11px;
+$footerCr: 13px;
+$lineHeight: 1.2rem;
